# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh,
  targets/support/post-kmerge.sh, targets/support/pre-kmerge.sh,
  targets/support/unmerge.sh, targets/tinderbox/tinderbox-chroot.sh:
  Removing any functions that we now call by default when we source
  chroot-functions.sh by default.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot2/netboot2-pkg.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/support/chroot-functions.sh, targets/support/pre-kmerge.sh:
  Clean up the debug code that I've added to stage1, move it to
  chroot_functions.sh, and call it from all of our main targets.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Wow. I need to make sure that we actually comment comments in make.conf or
  we end up with a failed build. Thanks to Christian Heim <phreak@gentoo.org>
  for pointing it out. This is catalyst 2.0.6_pre6 for testing.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh:
  We need to be sure we clear out /var/log/portage/elog as well as
  /var/log/emerge.log for stages 1 through 3.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,