@@ -17,14 +17,4 @@ else
 	echo UTC > /etc/TZ
 fi
 
-#if [ -n "${clst_CCACHE}" ]
-#then
-#	run_emerge -C dev-util/ccache || exit 1
-#fi
-
-#if [ -n "${clst_DISTCC}" ]
-#then
-#	run_emerge -C sys-devel/distcc || exit 1
-#fi
-
-#cleanup_distcc
+cleanup_stages
