@@ -2,7 +2,7 @@
 
 . /tmp/chroot-functions.sh
 
-update_env_settings
+cleanup_stages
 
 if [ -n "${clst_CCACHE}" ]
 then
@@ -12,13 +12,9 @@ fi
 if [ -n "${clst_DISTCC}" ]
 then
 	run_emerge -C sys-devel/distcc || exit 1
-	cleanup_distcc
 fi
 
 if [ -n "${clst_ICECREAM}" ]
 then
 	run_emerge -C sys-devel/icecream || exit 1
-	cleanup_icecream
 fi
-
-rm -f /var/log/emerge.log
