@@ -1,7 +1,6 @@
 #!/bin/bash
 
 . /tmp/chroot-functions.sh
-update_env_settings
 
 if [ -n "${clst_DISTCC}" ]
 then
